# OpenNI2

Wrappers/CSharp/: CMakeLists.txt  README.md
Wrappers/CSharp/Ni2WPFViewer/: CMakeLists.txt
Wrappers/CSharp/Ni2WPFViewer/Properties/: AssemblyInfo.cs
Wrappers/CSharp/NiHello.Net/: CMakeLists.txt  Program.cs
Wrappers/CSharp/NiViewer.Net/: CMakeLists.txt
Wrappers/CSharp/NiWrapper.Net/: CMakeLists.txt
Wrappers/CSharp/NiWrapper.Net/NiWrapper/: CMakeLists.txt
Wrappers/CSharp/NiWrapper.Net/NiWrapper.Net/: CMakeLists.txt
Wrappers/CSharp/SimpleRead.Net/: CMakeLists.txt  Program.cs
Wrappers/CSharp/SimpleViewer.Net/: CMakeLists.txt  MainWindow.Designer.cs  MainWindow.cs  Program.cs
Wrappers/CSharp/SimpleViewer.Net/Properties/: AssemblyInfo.cs
Wrappers/CSharp/cmake/: SetupBuildEnvironment.cmake
